src/objects/OAuthServiceAPIParameter__c.object
<CustomObject>
    <fields>
        <fullName>Help__c</fullName>
        <label>Help</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OAuth_Service_API__c</fullName>
        <label>OAuth Service API</label>
        <referenceTo>OAuthServiceAPI__c</referenceTo>
        <relationshipLabel>OAuth Service API Parameters</relationshipLabel>
        <relationshipName>OAuth_Service_API_Parameters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Query String</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Request Header</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuth Service API Parameter</label>
    <nameField>
        <label>Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAuth Service API Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>